--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,17 @@
     font-family: "Roboto", Arial, sans-serif;
     padding: 0px;
     margin: 0px;
+    color: #F9FAF8;
 }
 
 .header, 
 .banner,
+.center,
 .footer
 {
     background-color: #1f2937;
     padding-left: 160px;
-    padding-right: 80px;
+    padding-right: 160px;
 
 }
 
@@ -48,6 +50,11 @@
 .banner_text {
     flex: 1 1 auto;
     flex-direction: column;
+    justify-content: center;
+}
+
+.banner_text button {
+    background-color: green;
 }
 
 .banner_header {
@@ -65,4 +72,50 @@
     flex: 1 1 auto;
     padding: 40px;
     margin-left: 40px;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #F9FAF8;
+    margin-top: 24px;
+}
+
+.center_header {
+    flex: 1 1 auto;
+    text-align: center;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+}
+
+.center_content {
+    flex: 1 1 auto;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.content {
+    flex: 1 1 auto;
+    flex-direction: row;
+}
+
+.content_image {
+    flex: 0 1 0;
+    border: solid;
+    border-width: 4px;
+    border-color: #3882f6;
+    border-radius: 10%;
+    width: 150px;
+    height: 150px;
+}
+
+.content_text {
+    flex: 0 1 0;
+    text-align: center;
+    color: #1f2937;
+    text-wrap: wrap;
+    width: 150px;
 }
