--- a/css/styles.css
+++ b/css/styles.css
@@ -45,33 +45,51 @@
 .banner {
     display: flex;
     justify-content: space-between;
+    padding-right: 50px;
 }
 
 .banner_text {
+    display: flex;
     flex: 1 1 auto;
+    gap: 12px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: first flex-start;
+    margin-top: 40px;
 }
 
+
 .banner_text button {
-    background-color: blue;
+    background-color:#3882f6;
+    width: 150px;
+    height: 50px;
+    border: solid;
+    border-color: #3882f6;
+    border-radius: 25px;
+    font-size: 24px;
 }
 
 .banner_header {
-    flex: 1 1 auto;
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
 }
 
 .banner_body {
-    flex: 1 1 auto;
+    font-size: 20px;
 }
 
 .banner_image {
+    display: flex;
     flex: 1 1 auto;
     margin-left: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 120px;
+    margin-top: 40px;
+}
+
+.banner_image img {
+   flex: 1 1 o;
+   width: 100%;
+   height: 75%;
 }
 
 .center {
